webserver/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webapp
        image: quay.io/rhn-support-gizzi/summit-webserver-demo:1.0
        ports:
        - containerPort: 3000
