webserver/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  type: ClusterIP 
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: webserver
